--- a/pizzaria-frontend/src/app/registrar/registrar.component.html
+++ b/pizzaria-frontend/src/app/registrar/registrar.component.html
@@ -1,8 +1,8 @@
 <h1>Codar Pizzaria</h1>
 <h3>Pegue uma fatia</h3>
 <h4>Cadastrar-se</h4>
-<input type="text" id="nome" name="nome" placeholder="Nome Completo"><br>
-<input type="email" id="email" name="email" placeholder="E-mail"><br>
-<input type="password" id="senha" name="senha" placeholder="Senha"><br>
-<input type="password"id="senha2" name="senha2" placeholder="Confirme a senha"><br>
-<button (click)="registrarf()" >Registrar-se</button>
+<input type="text" #nome placeholder="Nome Completo"><br>
+<input type="email" #email placeholder="E-mail"><br>
+<input type="password" #senha placeholder="Senha"><br>
+<input type="password"#senha2 placeholder="Confirme a senha"><br>
+<button (click)="registrarf(nome.value, email.value, senha.value, senha2.value)" >Registrar-se</button>
