--- a/pizzaria-frontend/src/app/login/login.component.html
+++ b/pizzaria-frontend/src/app/login/login.component.html
@@ -3,5 +3,5 @@
 <h4>Efetuar Login</h4>
 <input type="text" #email placeholder="E-mail"><br>
 <input type="password"#senha placeholder="Senha"><br>
-<button (click)="loginf(email.value, senha.value)" class="btn btn-warning" >Acessar</button><br>
+<button (click)="loginf(email.value, senha.value)" >Acessar</button><br>
 <a routerLink="registrar">Criar uma conta</a>
