--- a/pizzaria-frontend/src/app/home/home.component.html
+++ b/pizzaria-frontend/src/app/home/home.component.html
@@ -1,1 +1,3 @@
-<p>home works!</p>
+<nav class="navbar navbar-light" style="background-color: #ffc400;">
+    <a class="navbar-brand" href="#">Codar Pizzaria</a>
+</nav>
