--- a/pizzaria-frontend/src/app/home/home.component.html
+++ b/pizzaria-frontend/src/app/home/home.component.html
@@ -1,3 +1,3 @@
 <nav class="navbar navbar-light" style="background-color: #ffc400;">
-    <a class="navbar-brand" href="#">Codar Pizzaria</a>
+    <a class="navbar-brand" href="home">Codar Pizzaria</a>
 </nav>
