--- a/pizzaria-frontend/src/app/home/home.component.html
+++ b/pizzaria-frontend/src/app/home/home.component.html
@@ -1,3 +1,8 @@
 <nav class="navbar navbar-light" style="background-color: #ffc400;">
     <a class="navbar-brand" href="home">Codar Pizzaria</a>
+    <a class="nav-link active" href="#">Buscar <span class="sr-only">(current)</span></a>
+    <a class="nav-link" href="#">Sobre</a>
+    <a class="nav-link" href="#">Como funciona</a>
+    <a class="nav-link" href="#">Planos</a>
+    <a class="nav-link" href="#">Contato</a>
 </nav>
