--- a/pizzaria-frontend/src/app/home/home.component.html
+++ b/pizzaria-frontend/src/app/home/home.component.html
@@ -1,8 +1,26 @@
-<nav class="navbar navbar-light" style="background-color: #ffc400;">
-    <a class="navbar-brand" href="home">Codar Pizzaria</a>
-    <a class="nav-link active" href="#">Buscar <span class="sr-only">(current)</span></a>
-    <a class="nav-link" href="#">Sobre</a>
-    <a class="nav-link" href="#">Como funciona</a>
-    <a class="nav-link" href="#">Planos</a>
-    <a class="nav-link" href="#">Contato</a>
+<nav class="navbar navbar-expand-lg" style="background-color: #ffc400;">
+    <a class="navbar-brand" href="/home">Codar Pizzaria</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/home">Buscar <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/home">Sobre</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/home">Como funciona</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/home">Planos</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/home">Contato</a>
+        </li>
+      </ul>
+    </div>
 </nav>
