--- a/pizzaria-frontend/src/app/home/home.component.html
+++ b/pizzaria-frontend/src/app/home/home.component.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #ffc400;">
-    <a class="navbar-brand" href="/home">Codar Pizzaria</a>
+    <a class="navbar-brand" href="/home">
+      <img src="../../assets/face-black-48dp.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
