--- a/pizzaria-frontend/src/app/login/login.component.html
+++ b/pizzaria-frontend/src/app/login/login.component.html
@@ -1,7 +1,12 @@
-<h1>Codar Pizzaria</h1>
-<h3>Pegue uma fatia</h3>
-<h4>Efetuar Login</h4>
-<input type="text" #email placeholder="E-mail"><br>
-<input type="password"#senha placeholder="Senha"><br>
-<button (click)="loginf(email.value, senha.value)" >Acessar</button><br>
-<a routerLink="registrar">Criar uma conta</a>
+<div class="float-left">
+    <h1>Codar Pizzaria</h1>
+    <h3>Pegue uma fatia</h3>
+</div>
+<div class="float-right">
+    <h4>Efetuar Login</h4>
+    <input type="text" #email placeholder="E-mail"><br>
+    <input type="password"#senha placeholder="Senha"><br>
+    <button (click)="loginf(email.value, senha.value)" >Acessar</button><br>
+    <a routerLink="registrar">Criar uma conta</a>
+</div>
+
