Icone movido para a direita, ele agora redireciona o usuario para a tela de login

--- a/pizzaria-frontend/src/app/home/home.component.html
+++ b/pizzaria-frontend/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #ffc400;">
-    <a class="navbar-brand" href="/home">
-      <img src="../../assets/face-black-48dp.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+    <a class="navbar-brand">
+      <h4>Codar Pizzaria</h4>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,8 +8,8 @@
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/home">Buscar <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="/home">Buscar </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/home">Sobre</a>
@@ -22,6 +22,11 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/home">Contato</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            <img src="../../assets/face-black-48dp.svg">
+          </a>
         </li>
       </ul>
     </div>
