Substitui o uso de margin por um grid system

--- a/pizzaria-frontend/src/app/registrar/registrar.component.html
+++ b/pizzaria-frontend/src/app/registrar/registrar.component.html
@@ -1,8 +1,19 @@
-<h1>Codar Pizzaria</h1>
-<h3>Pegue uma fatia</h3>
-<h4>Cadastrar-se</h4>
-<input type="text" #nome placeholder="Nome Completo"><br>
-<input type="email" #email placeholder="E-mail"><br>
-<input type="password" #senha placeholder="Senha"><br>
-<input type="password"#senha2 placeholder="Confirme a senha"><br>
-<button (click)="registrarf(nome.value, email.value, senha.value, senha2.value)" >Registrar-se</button>
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
+            <h1>Codar Pizzaria</h1>
+            <h3>Pegue uma fatia</h3>
+            <h4>Cadastrar-se</h4>
+        </div>
+        
+        <div class="col-sm">
+            <input type="text" #nome placeholder="Nome Completo"><br>
+            <input type="email" #email placeholder="E-mail"><br>
+            <input type="password" #senha placeholder="Senha"><br>
+            <input type="password"#senha2 placeholder="Confirme a senha"><br>
+            <button (click)="registrarf(nome.value, email.value, senha.value, senha2.value)" >Registrar-se</button>
+        </div>
+        
+    </div>
+</div>
+
