--- a/pizzaria-frontend/src/app/home/home.component.html
+++ b/pizzaria-frontend/src/app/home/home.component.html
@@ -1,12 +1,12 @@
-<nav class="navbar navbar-expand-lg" style="background-color: #ffc400;">
+<nav class="navbar navbar-expand-lg" style="background-color: #F5F5F5;">
     <a class="navbar-brand">
-      <h4>Codar Pizzaria</h4>
+      <h4 style="color: #EF4C00">Codar Pizzaria</h4>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" >
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" href="/home">Buscar </a>
@@ -31,3 +31,26 @@
       </ul>
     </div>
 </nav>
+<div class="container">
+  <div class="row align-items-center">
+    <div class="col">
+      <div class="text-center">
+        <img src="https://images.unsplash.com/photo-1513104890138-7c749659a591?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" class="img-fluid fatia">
+      </div>
+    </div>
+  </div>
+  <div class="row justify-content-between">
+    <h5 class="float-left"  style="color: #B30733;">Nosso Cardápio</h5>
+    <nav class="navbar navbar-light bg-light">
+      <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Procure sua favorita" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg" style="color: #9F072F">
+          <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
+          <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+          </svg>
+      </button>
+      </form>
+    </nav>
+  </div>
+</div>
